Fixing main menu / download area in high contrast (#3760)

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -164,6 +164,12 @@
         }
     }
 
+    /** Top menu **/
+    #mainmenu, #downloadArea {
+        background-color: black !important;
+        color: white !important;
+    }
+    
     /* Items */
     .ui.item {
         background: black !important;
